Issue #1080 fix: Pop up style left alignment fix

--- a/player/public/css/app/style.css
+++ b/player/public/css/app/style.css
@@ -490,7 +490,7 @@ body{
 .tryagian-next-div{
     font-size: 1.1em;
     top: 35%;
-    left: 46%;
+    left: 47%;
 
 }
 
